--- a/3D-konstrukcija-hale.html
+++ b/3D-konstrukcija-hale.html
@@ -101,7 +101,7 @@
                     <div class="swiper-wrapper align-items-center">
 
                         <div class="swiper-slide">
-                            <img src="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" alt="">
+                            <img src="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" alt="Digitalni prikaz čelične zgrade sa jarko plavim, zelenim i narandžastim gredama.">
                         </div>
 
                         <div class="swiper-slide">
