--- a/dizajn-enterijera.html
+++ b/dizajn-enterijera.html
@@ -101,7 +101,7 @@
                     <div class="swiper-wrapper align-items-center">
 
                         <div class="swiper-slide">
-                            <img src="assets/img/projects/enterijeri/apartman/1.jpeg" alt="">
+                            <img src="assets/img/projects/enterijeri/apartman/1.jpeg" alt="3D vizualizacija modernog stana ili apartmana sa svetlo sivim kaučima i plavim jastucima.">
                         </div>
                         <div class="swiper-slide">
                             <img src="assets/img/projects/enterijeri/apartman/2.jpeg" alt="">
