--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>VB Inženjering | Građevinska firma </title>
-  <meta content="Firma za građevinske projekte u Beogradu i Srbiji. Nudimo sve od arhitektonskog projektovanja i izrade konstrukcija, do izvođenja rad i 3D vizualizacija. Pogledajte naš portfolio i kontaktirajte nas." name="description">
+  <meta content="Firma za građevinske projekte u Beogradu i Srbiji. Nudimo sve od arhitektonskog projektovanja i izrade konstrukcija, do izvođenja i tehnickog nadzora gradjevniskih radova i 3D vizualizacija odnosno dizajna eksterijera i enterijera. Prodajemo i hidroizolazione materijale. Pogledajte naš portfolio i kontaktirajte nas." name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -50,7 +50,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/logo/logo-removebg.png" alt="Logo VB Inženjering-a" style=" margin-right: 10%;">
+        <img src="assets/img/logo/logo-removebg.png" alt="Logo gradjevinske firme VB Inženjering" style=" margin-right: 10%;">
         <h1 style="font-size: 4vh;">VB INŽENJERING</h1>
       </a>
 
@@ -95,7 +95,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center">
-            <h1 data-aos="fade-down" style="font-size: 6vh; font-weight: 700; color: #ffffff; margin-bottom: 10px;">
+            <h1 data-aos="fade-down" style="font-size: 7vh; font-weight: 700; color: #ffffff; margin-bottom: 10px;">
               VB <span style="color: var(--color-primary);">Inženjering</span> d.o.o
             </h1>
             <h2 data-aos="fade-up" style="font-size: 4vh; font-weight: 400; color: #f1f1f1; letter-spacing: 1px;">
@@ -111,7 +111,7 @@
 
       <div class="carousel-item active" style="background-image: url(assets/img/hero-carousel/hero-carousel-1.jpg)"></div>
       <div class="carousel-item" style="background-image: url(assets/img/projects/enterijeri/apartman/2.jpeg)"></div>
-      <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/hero-carousel-2.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/slika1.jpg)"></div>
       <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/hero-carousel-5.jpg)"></div>
 
       <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
@@ -285,7 +285,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item position-relative inner-shadow">
               <div class="icon">
-                <i class="fa-solid fa-hammer"></i>
+                <i class="fa-solid fa-wrench"></i>
               </div>
               <h3>Konstrukcija</h3>
               <p>Projektovanje nosivih konstrukcija – betonskih, čeličnih, drvenih i montažnih. Primenjujemo najnovije standarde i softvere za proračun statike i dinamike kako bismo obezbedili sigurnost i ekonomičnost konstrukcije.</p>
@@ -317,7 +317,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item position-relative" style="background-color: transparent;">
-              <img src="assets/img/logo/logoDesign.png" style="width: 80%; height: 85%; margin-left: 10%; margin-top:10%; ">
+              <img src="assets/img/logo/logoDesign.png" alt="logo gradjevinske firme VB inzenjering iz Beograda" style="width: 80%; height: 85%; margin-left: 10%; margin-top:10%; ">
             </div>
           </div>
 
@@ -382,7 +382,7 @@
         <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
                     <div class="col-lg-4 col-md-6 portfolio-item filter-celik">
                       <div class="portfolio-content h-100">
-                        <img src="assets/img/projects/hala1/4.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/projects/hala1/4.jpg" class="img-fluid" alt="3D konstrukcija hale sa tamno sivim i narandžastim akcentima">
                         <div class="portfolio-info">
                           <h4>Hala 1</h4>
                           <p>3D arhitektura hale</p>
