--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-celik">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/nadstresnica/4.png" class="img-fluid" alt="">
+                <img src="assets/img/projects/nadstresnica/4.png" class="img-fluid" alt="Moderna čelična krovna konstrukcija sa providnim panelima.">
                 <div class="portfolio-info">
                   <h4>Nadstrešnica</h4>
                   <p>Konstrukcijsko rešenje nadstrešnice</p>
@@ -122,7 +122,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-celik">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/hala1/4.jpg" class="img-fluid" alt="">
+                <img src="assets/img/projects/hala1/4.jpg" class="img-fluid" alt="3D konstrukcija hale sa tamno sivim i narandžastim akcentima">
                 <div class="portfolio-info">
                   <h4>Hala 1</h4>
                   <p>3D arhitektura hale</p>
@@ -134,7 +134,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-celik">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" class="img-fluid" alt="">
+                <img src="assets/img/projects/hala2/FB_IMG_1738919768674.jpg" class="img-fluid" alt="3D Digitalni prikaz čelične zgrade sa jarko plavim, zelenim i narandžastim gredama.">
                 <div class="portfolio-info">
                   <h4>Hala 2</h4>
                   <p>3D konstrukcija hale</p>
@@ -170,7 +170,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-vizualizacije">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/enterijeri/apartman/1.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/projects/enterijeri/apartman/1.jpeg" class="img-fluid" alt="3D vizualizacija modernog stana ili apartmana sa svetlo sivim kaučima i plavim jastucima.">
                 <div class="portfolio-info">
                   <h4>Apartman</h4>
                   <p>Enterijer stambenog objekta</p>
@@ -182,7 +182,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-vizualizacije">
               <div class="portfolio-content h-100">
-                <img src="assets/img/projects/enterijeri/ordinacija/1.jpeg" class="img-fluid" alt="">
+                <img src="assets/img/projects/enterijeri/ordinacija/1.jpeg" class="img-fluid" alt="3D vizualizacije enterijera moderne stomatološke ordinacije sa dve stomatološke stolice, elegantnim belo-zelenim dizajnom, velikim prozorom i minimalističkim dekorom">
                 <div class="portfolio-info">
                   <h4>Zubarska ordinacija</h4>
                   <p>Enterijer zubarske ordinacije</p>
