--- a/services.html
+++ b/services.html
@@ -128,7 +128,7 @@
 
         <div class="col-lg-8">
             <div id="arhitektura">
-                <img src="assets/img/services/arhitektura.png" alt="" class="img-fluid services-img">
+                <img src="assets/img/services/arhitektura.png" alt="Ruke drže olovku iznad arhitektonskih nacrta sa crvenom zaštitnom kacigom, laptopom i alatima za crtanje i predstavljaju uslugu arhitektonskog projektovanja." class="img-fluid services-img">
                 <h3>Arhitektura</h3>
                 <p>
                   Naš pristup arhitektonskom projektovanju pokriva sve faze procesa, osiguravajući da svaki projekat bude pažljivo planiran i uspešno realizovan. Počevši od inicijalnog idejnog rešenja i razrade koncepta, naši arhitekti vas vode kroz proces stvaranja vizije koja odgovara vašim potrebama i aspiracijama.
@@ -139,7 +139,7 @@
             </div>
 
           <div id="konstrukcija" class="mt-5">
-              <img src="assets/img/services/konstrukcija.jpg" alt="" class="img-fluid services-img">
+              <img src="assets/img/services/konstrukcija.jpg" alt="Gradilište sa velikom metalnom konstrukcijom u izgradnji. Radnici u zaštitnim prslucima i kacigama stoje u blizini." class="img-fluid services-img">
               <h3>Konstrukcija</h3>
               <p>
                 Bilo da se radi o betonskim konsktrukcijama, stabilnim čeličnim ili montažnim sistemima, naš cilj je da obezbedimo optimalno rešenje koje garantuje dugotrajnu pouzdanost i sigurnost.
@@ -150,7 +150,7 @@
           </div>
 
           <div id="dokumentacija" class="mt-5">
-            <img src="assets/img/services/dokumentacija.png" alt="" class="img-fluid services-img">
+            <img src="assets/img/services/dokumentacija.png" alt="Osoba piše u tabelu preko arhitektonskih nacrta, uz laptop i naočare, baveci se dokumentacijom i planiranjem u profesionalnom okruženju." class="img-fluid services-img">
             <h3>Dokumentacija</h3>
             <p>
               Pružamo kompletnu uslugu izrade projektne dokumentacije, neophodne za uspešnu realizaciju svakog građevinskog poduhvata. Fokus je na tome da celokupna dokumentacija bude precizno prilagođena kako važećim zakonskim zahtevima i regulativama, tako i specifičnim potrebama investitora.  preuzimamo na sebe i prikupljanje svih neophodnih saglasnosti i dozvola od relevantnih institucija, čime se proces dobijanja građevinske dozvole maksimalno ubrzava i pojednostavljuje.
@@ -166,7 +166,7 @@
           </div>
 
           <div id="troskovi" class="mt-5">
-            <img src="assets/img/services/procenatroskova.jpg" alt="" class="img-fluid services-img">
+            <img src="assets/img/services/procenatroskova.jpg" alt="Kalkulator, olovka i hemijska olovka na finansijskim dokumentima sa grafikonima i brojevima." class="img-fluid services-img">
             <h3>Procena troškova</h3>
             <p>
               Kroz izradu predmera radova i materijala, pružamo jasnu sliku o svim neophodnim elementima i količinama, čime se eliminišu iznenađenja i neplanirani troškovi.
@@ -177,25 +177,24 @@
           </div>
 
           <div id="vizuelizacija" class="mt-5">
-<!--            <img src="assets/img/services/visualization.png" alt="" class="img-fluid services-img">-->
             <div class="position-relative h-100">
               <div class="slides-1 portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
 
                   <div class="swiper-slide">
-                    <img class="slider-img" src="assets/img/services/vizuelizacija/ordinacija1.jpeg" alt="">
+                    <img class="slider-img" src="assets/img/services/vizuelizacija/ordinacija1.jpeg" alt="3D vizualizacije enterijera moderne stomatološke ordinacije sa dve stomatološke stolice, elegantnim belo-zelenim dizajnom, velikim prozorom i minimalističkim dekorom">
                   </div>
 
                   <div class="swiper-slide">
-                    <img class="slider-img" src="assets/img/services/vizuelizacija/eksterijer1.jpeg" alt="">
+                    <img class="slider-img" src="assets/img/services/vizuelizacija/eksterijer1.jpeg" alt="3D vizuelizacija vikendice brvnara u obliku slova A sa velikim prozorima usred snežnog pejzaža u sumrak">
                   </div>
 
                   <div class="swiper-slide">
-                    <img class="slider-img" src="assets/img/services/vizuelizacija/enterijer1.jpeg" alt="">
+                    <img class="slider-img" src="assets/img/services/vizuelizacija/enterijer1.jpeg" alt="3D vizuelizacija enterijera moderne dnevne sobe sa svetlosivom sofom, plavim i šarenim jastucima, drvenim stočićem za kafu i minimalističkom trpezarijom.">
                   </div>
 
                   <div class="swiper-slide">
-                    <img class="slider-img" src="assets/img/services/visualization.png" alt="">
+                    <img class="slider-img" src="assets/img/services/visualization.png" alt="Moderna dvospratna kuća sa velikim prozorima i balkonima, u kontrastu sa arhitektonskim nacrtima. Slika prikazuje elegantan, savremen dizajn.">
                   </div>
 
                 </div>
@@ -206,7 +205,7 @@
               <div class="swiper-button-next"></div>
             </div>
             <br>
-            <h3>3D vizuelizacija</h3>
+            <h3>3D vizuelizacija enterijera i eksterijera</h3>
             <p>
               Koristeći napredne tehnologije, kreiramo detaljne 3D vizualizacije koje investitorima i izvođačima pružaju kristalno jasnu predstavu o finalnom izgledu projekta.
             </p>
@@ -216,7 +215,7 @@
           </div>
 
           <div id="izvodjenje" class="mt-5">
-            <img src="assets/img/services/gradjevinskirad.jpg" alt="" class="img-fluid services-img">
+            <img src="assets/img/services/gradjevinskirad.jpg" alt="Dva građevinska radnika u žutim šlemovima rade na gradilištu, rukujući drvetom i alatima." class="img-fluid services-img">
             <h3>Izvođenje radova</h3>
             <p>
               Usluga izvođenja obuhvata kompletno upravljanje građevinskim radovima, od početka do finalne predaje ključeva.
@@ -230,7 +229,7 @@
           </div>
 
           <div id="nadzor" class="mt-5">
-            <img src="assets/img/services/nadzor.jpg" alt="" class="img-fluid services-img">
+            <img src="assets/img/services/nadzor.jpg" alt="Građevinska radnik i gradjevinski inzenjer u zaštitnim kacigama i zaštitnim prslucima razgovaraju na gradilištu" class="img-fluid services-img">
             <h3>Tehnički nadzor</h3>
             <p>
               Tokom izvođenja svakog građevinskog projekta, stručni građevinski nadzor je nezaobilazna karika koja obezbeđuje uspeh. Naša uloga je da budemo vaš nezavisni predstavnik na gradilištu, posvećen zaštiti vaših interesa i osiguravanju da se svi radovi izvode u skladu sa najvišim standardima.
@@ -241,25 +240,24 @@
           </div>
 
           <div id="prodaja" class="mt-5">
-<!--            <img src="assets/img/services/prodaja/prodaja.jpeg" alt="" class="img-fluid services-img">-->
             <div class="position-relative h-100">
               <div class="slides-1 portfolio-details-slider swiper">
                 <div class="swiper-wrapper align-items-center">
 
                   <div class="swiper-slide">
-                    <img class="slider-img" src="assets/img/services/prodaja/prodaja.jpeg" alt="">
+                    <img class="slider-img" src="assets/img/services/prodaja/prodaja.jpeg" alt="Unutrašnjost skladišta sa redovima naslaganih metalnih limenki za boju i lepak na drvenim paletama">
                   </div>
 
                   <div class="swiper-slide">
-                    <img class="slider-img" src="assets/img/services/prodaja/1.png" alt="">
+                    <img class="slider-img" src="assets/img/services/prodaja/1.png" alt="Kolaž koji prikazuje rolne SBS hidroizolacione membrane u pakovanju i u upotrebi na velikoj spoljašnjoj površini. Tekst glasi „SBS Asfaltna Hidroizolaciona Membrana“ sa logom VB inzenjeringa">
                   </div>
 
                   <div class="swiper-slide">
-                    <img class="slider-img" src="assets/img/services/prodaja/2.png" alt="">
+                    <img class="slider-img" src="assets/img/services/prodaja/2.png" alt="U skladištu su prikazane gomile rolni bele PVC vodootporne membrane. Vidljivi su tekst „PVC Vodootporna Membrana“ i logo VB inzenjeringa">
                   </div>
 
                   <div class="swiper-slide">
-                    <img class="slider-img" src="assets/img/services/prodaja/3.png" alt="">
+                    <img class="slider-img" src="assets/img/services/prodaja/3.png" alt="Kolaž koji prikazuje vodootporne premaze: radnici koji nanose tečnost, valjak za farbanje sa opcijama boja, kante sa proizvodima naslagane jedna na drugu i logo sa natpisom „VB“.">
                   </div>
 
                 </div>
