--- a/project-details-default.html
+++ b/project-details-default.html
@@ -66,7 +66,8 @@
                                 <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
                                 <li><a href="dizajn-eksterijera.html">Eksterijeri</a></li>
                             </ul>
-                        </li>                    </ul>
+                        </li>
+                    </ul>
                 </li>
                 <li><a href="about.html">O nama</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
@@ -85,6 +86,7 @@
             <h2>Projekti su u toku</h2>
             <ol>
                 <li><a href="index.html">Početna stranica</a></li>
+                <li><a href="projects.html">Projekti</a></li>
                 <li>Detalji projekta</li>
             </ol>
 
