--- a/celicna-nadstresnica.html
+++ b/celicna-nadstresnica.html
@@ -68,7 +68,7 @@
                 </ul>
               </li>            </ul>
           </li>
-          <li><a href="about.html">O nama</a></li>
+          <li><a href="o-nama.html">O nama</a></li>
           <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
       </nav><!-- .navbar -->
@@ -205,7 +205,7 @@
           </div><!-- End footer links column-->
 
           <div class="col-lg-2 col-md-4 footer-links">
-            <strong><a href="about.html">O nama</a></strong>
+            <strong><a href="o-nama.html">O nama</a></strong>
           </div><!-- End footer links column-->
 
           <div class="col-lg-1 col-md-4 footer-links">
