--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
               </li>
             </ul>
           </li>
-          <li><a href="about.html">O nama</a></li>
+          <li><a href="o-nama.html">O nama</a></li>
           <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
       </nav><!-- .navbar -->
@@ -314,7 +314,7 @@
           </div><!-- End footer links column-->
 
           <div class="col-lg-2 col-md-4 footer-links">
-            <strong><a href="about.html">O nama</a></strong>
+            <strong><a href="o-nama.html">O nama</a></strong>
           </div><!-- End footer links column-->
 
           <div class="col-lg-1 col-md-4 footer-links">
