Implementacija slanja poruka sa kontakt stranice

--- a/blog.html
+++ b/blog.html
@@ -49,8 +49,8 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="o-nama.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="projects.html">Projects</a></li>
+          <li><a href="usluge.html">Services</a></li>
+          <li><a href="projekti.html">Projects</a></li>
           <li><a href="blog.html" class="active">Blog</a></li>
           <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
@@ -420,7 +420,6 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
