--- a/index.html
+++ b/index.html
@@ -35,13 +35,11 @@
 <style>
   .inner-shadow {
     background-color: #E5E5E5;
-    border-radius: 20px; /* Zaobljeni uglovi */
+    border-radius: 20px;
     box-shadow:
             inset 0px -30px 50px rgba(255, 255, 255, 0.7),
             inset 0px 30px 50px rgba(13, 39, 80, 0.16);
   }
-
-
 </style>
 
 
@@ -60,10 +58,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Početna stranica</a></li>
-          <li><a href="services.html">Usluge</a></li>
+          <li><a href="usluge.html">Usluge</a></li>
           <li class="dropdown"><a href="#"><span>Projekti</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="project-details-default.html">Montažni objekti</a></li>
+              <li><a href="projekat-u-toku.html">Montažni objekti</a></li>
               <li class="dropdown"><a href="#"><span>Čelične konstrukcije</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="3D-arhitektura-hale.html">Hala - 3D arhitektura</a></li>
@@ -71,8 +69,8 @@
                   <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                 </ul>
               </li>
-              <li><a href="project-details-default.html">Betonske konstrukcije</a></li>
-              <li><a href="project-details-default.html">Sanacije i reparature</a></li>
+              <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
+              <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
               <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
@@ -112,7 +110,7 @@
 
       <div class="carousel-item active" style="background-image: url(assets/img/hero-carousel/hero-carousel-1.jpg)"></div>
       <div class="carousel-item" style="background-image: url(assets/img/projects/enterijeri/apartman/2.jpeg)"></div>
-      <div class="carousel-item" style="background-image: url(assets/img/slika1.jpg)"></div>
+      <div class="carousel-item" style="background-image: url(assets/img/slika1.jpeg)"></div>
       <div class="carousel-item" style="background-image: url(assets/img/hero-carousel/hero-carousel-5.jpg)"></div>
 
       <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
@@ -139,14 +137,14 @@
             <div class="content">
               <h3>Kompletna rešenja za sve vaše građevinske ideje. </h3>
               <h4>Naša misija:</h4>
-              <p>Pružanje vrhunske usluge u oblasti građevinarstva, gradeći sigurne, funkcionalne i estetski privlačne objekte.</p>
+              <p>Pružanje vrhunske usluge u oblasti građevinarstva u Beogradu i okolini, gradeći sigurne, funkcionalne i estetski privlačne objekte.</p>
               <h4>Naša vizija:</h4>
               <p>Istaći se kao prvi izbor za sve klijente koji traže pouzdanog partnera za izgradnju objekata koji poboljšavaju kvalitet života.</p>
             </div>
           </div>
 
           <div class="col-lg-5" data-aos="fade">
-            <form action="forms/sendMail.php" name="form" method="POST" class="php-email-form" novalidate>
+            <form action="forms/sendMail.php" name="form" method="POST" class="php-email-form" id="pocetna-forma" novalidate>
               <h3>Kontaktirajte nas</h3>
               <p>Za sve Vaše potrebe u vezi sa građevinskim ili građevinsko-zanatskim radovima, stojimo na raspolaganju. Kontaktirajte nas porukom.</p>
               <div class="row gy-3">
@@ -203,7 +201,7 @@
               </div>
               <h3>Arhitektura</h3>
               <p>Obuhvata sve faze arhitektonskog projektovanja – od idejnog rešenja i koncepta, preko izrade glavnog projekta, do tehničke dokumentacije za izvođenje. Naš tim arhitekata kombinuje funkcionalnost, estetiku i održivost kako bi stvorio savremene i prilagođene objekte.</p>
-              <a href="services.html#arhitektura" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="usluge.html#arhitektura" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -214,7 +212,7 @@
               </div>
               <h3>Konstrukcija</h3>
               <p>Projektovanje nosivih konstrukcija – betonskih, čeličnih, drvenih i montažnih. Primenjujemo najnovije standarde i softvere za proračun statike i dinamike kako bismo obezbedili sigurnost i ekonomičnost konstrukcije.</p>
-              <a href="services.html#konstrukcija" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="usluge.html#konstrukcija" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -225,7 +223,7 @@
               </div>
               <h3>Dokumentacija</h3>
               <p>Kompletna projektna dokumentacija prilagođena zakonskim zahtevima i potrebama investitora. Uključuje idejni, glavni i izvedbeni projekat, kao i potrebne saglasnosti i dozvole.</p>
-              <a href="services.html#dokumentacija" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="usluge.html#dokumentacija" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -236,7 +234,7 @@
               </div>
               <h3>Procena troškova</h3>
               <p>Precizno i detaljno sastavljanje predmera radova i materijala, kao i finansijskih procena, koje omogućavaju pravovremeno planiranje i kontrolu troškova.</p>
-              <a href="services.html#troskovi" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="usluge.html#troskovi" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -253,7 +251,7 @@
               </div>
               <h3>3D vizuelizacija</h3>
               <p>Napredne 3D vizualizacije i BIM modeli koji omogućavaju investitorima i izvođačima jasnu predstavu o projektu. Olakšavaju komunikaciju i identifikaciju potencijalnih problema pre početka radova.</p>
-              <a href="services.html#vizuelizacija" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="usluge.html#vizuelizacija" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -264,7 +262,7 @@
               </div>
               <h3>Izvođenje radova</h3>
               <p>Organizacija i upravljanje građevinskim radovima, kontrola kvaliteta i rokova, kao i koordinacija svih učesnika na gradilištu.</p>
-              <a href="services.html#izvodjenje" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="usluge.html#izvodjenje" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -275,7 +273,7 @@
               </div>
               <h3>Tehnički nadzor</h3>
               <p>Stručni građevinski nadzor tokom izvođenja radova kako bi se osigurao kvalitet, usklađenost sa projektom i standardima, te pravovremeno rešavanje tehničkih pitanja.</p>
-              <a href="services.html#nadzor" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="usluge.html#nadzor" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
 
@@ -286,7 +284,7 @@
               </div>
               <h3>Prodaja materijala</h3>
               <p>Bavimo se prodajom visokokvalitetnih hidroizolacionih materijala za građevinsku industriju. Ponosni smo što smo jedini zvanični predstavnici u Evropi kompanije Great Ocean Waterproof Technology Co., Ltd., jedne od najvećih i najrenomiranijih kineskih fabrika u oblasti hidroizolacija.</p>
-              <a href="services.html#prodaja" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
+              <a href="usluge.html#prodaja" class="readmore stretched-link">Saznajte više <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
           
@@ -302,7 +300,7 @@
         <div class="section-header">
           <h2>Najnoviji projekti</h2>
           <p>Upoznajte se sa našim radovima kroz izvedene projekte i uverite se u posvećenost koju ulažemo u svaki detalj. Pregledajte sve dosadašnje projekte: </p>
-          <br><a href="projects.html">SVI PROJEKTI</a>
+          <br><a href="projekti.html">SVI PROJEKTI</a>
         </div>
         <div class="row gy-4 portfolio-container" data-aos="fade-up" data-aos-delay="200">
                     <div class="col-lg-4 col-md-6 portfolio-item filter-celik">
@@ -354,11 +352,11 @@
           </div><!-- End footer links column-->
 
           <div class="col-lg-2 col-md-4 footer-links">
-            <strong><a href="services.html">Usluge</a></strong>
+            <strong><a href="usluge.html">Usluge</a></strong>
           </div><!-- End footer links column-->
 
           <div class="col-lg-2 col-md-4 footer-links">
-            <strong><a href="projects.html">Projekti</a></strong>
+            <strong><a href="projekti.html">Projekti</a></strong>
           </div><!-- End footer links column-->
 
           <div class="col-lg-2 col-md-4 footer-links">
@@ -399,11 +397,12 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
   <script src="assets/js/dropdown.js"></script>
+  <script src="assets/js/slanje-s-forme.js"></script>
 
 </body>
 
