--- a/kontakt.html
+++ b/kontakt.html
@@ -36,7 +36,7 @@
   .map-responsive {
     position: relative;
     overflow: hidden;
-    padding-bottom: 56.25%; /* omjer 16:9 */
+    padding-bottom: 56.25%;
     height: 0;
   }
   .map-responsive iframe {
@@ -65,10 +65,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Početna stranica</a></li>
-          <li><a href="services.html">Usluge</a></li>
+          <li><a href="usluge.html">Usluge</a></li>
           <li class="dropdown"><a href="#"><span>Projekti</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="project-details-default.html">Montažni objekti</a></li>
+              <li><a href="projekat-u-toku.html">Montažni objekti</a></li>
               <li class="dropdown"><a href="#"><span>Čelične konstrukcije</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="3D-arhitektura-hale.html">Hala - 3D arhitektura</a></li>
@@ -76,8 +76,8 @@
                   <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                 </ul>
               </li>
-              <li><a href="project-details-default.html">Betonske konstrukcije</a></li>
-              <li><a href="project-details-default.html">Sanacije i reparature</a></li>
+              <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
+              <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
               <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
@@ -203,11 +203,11 @@
           </div><!-- End footer links column-->
 
           <div class="col-lg-2 col-md-4 footer-links">
-            <strong><a href="services.html">Usluge</a></strong>
+            <strong><a href="usluge.html">Usluge</a></strong>
           </div><!-- End footer links column-->
 
           <div class="col-lg-2 col-md-4 footer-links">
-            <strong><a href="projects.html">Projekti</a></strong>
+            <strong><a href="projekti.html">Projekti</a></strong>
           </div><!-- End footer links column-->
 
           <div class="col-lg-2 col-md-4 footer-links">
@@ -228,7 +228,6 @@
           <p>info.vbinzenjering@gmail.com</p>
           <p>064/217-5474</p>
           <p>Beograd, Srbija</p>
-
           <strong><span>VB Inženjering, 2025.</span></strong>
         </div>
       </div>
@@ -248,12 +247,12 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
   <script src="assets/js/dropdown.js"></script>
+  <script src="assets/js/slanje-s-forme.js"></script>
 
 </body>
 
