--- a/projekti.html
+++ b/projekti.html
@@ -47,10 +47,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Početna stranica</a></li>
-          <li><a href="services.html">Usluge</a></li>
+          <li><a href="usluge.html">Usluge</a></li>
           <li class="dropdown"><a href="#"><span>Projekti</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="project-details-default.html">Montažni objekti</a></li>
+              <li><a href="projekat-u-toku.html">Montažni objekti</a></li>
               <li class="dropdown"><a href="#"><span>Čelične konstrukcije</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="3D-arhitektura-hale.html">Hala - 3D arhitektura</a></li>
@@ -58,8 +58,8 @@
                   <li><a href="celicna-nadstresnica.html">Čelična nadstrešnica</a></li>
                 </ul>
               </li>
-              <li><a href="project-details-default.html">Betonske konstrukcije</a></li>
-              <li><a href="project-details-default.html">Sanacije i reparature</a></li>
+              <li><a href="projekat-u-toku.html">Betonske konstrukcije</a></li>
+              <li><a href="projekat-u-toku.html">Sanacije i reparature</a></li>
               <li class="dropdown"><a href="#"><span>3D vizuelizacije</span><i class="bi bi-chevron-down dropdown-indicator"></i></a>
                 <ul>
                   <li><a href="dizajn-enterijera.html">Enterijeri</a></li>
@@ -219,11 +219,11 @@
           </div><!-- End footer links column-->
 
           <div class="col-lg-2 col-md-4 footer-links">
-            <strong><a href="services.html">Usluge</a></strong>
+            <strong><a href="usluge.html">Usluge</a></strong>
           </div><!-- End footer links column-->
 
           <div class="col-lg-2 col-md-4 footer-links">
-            <strong><a href="projects.html">Projekti</a></strong>
+            <strong><a href="projekti.html">Projekti</a></strong>
           </div><!-- End footer links column-->
 
           <div class="col-lg-2 col-md-4 footer-links">
@@ -264,7 +264,6 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
