--- a/usluge.html
+++ b/usluge.html
@@ -82,8 +82,8 @@
               </li>
             </ul>
           </li>
-          <li><a href="o-nama.html">O nama</a></li>
           <li><a href="kontakt.html">Kontakt</a></li>
+          <li><a href="index.html#team">O nama</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -116,6 +116,7 @@
               <a href="#konstrukcija">Konstrukcija</a>
               <a href="#dokumentacija">Dokumentacija</a>
               <a href="#troskovi">Procena troškova</a>
+              <a href="#geodezija">Geodezija</a>
               <a href="#vizuelizacija">3D vizualizacija</a>
               <a href="#izvodjenje">Izvođenje radova</a>
               <a href="#nadzor">Tehnički nadzor</a>
@@ -174,6 +175,23 @@
             <p>
               Usluga obuhvata detaljno finansijsko planiranje, uključujući predračun koji omogućava realističnu procenu ukupne investicije. Na taj način, dobijate potpunu transparentnost i kontrolu nad budžetom već od samog početka.
             </p>
+          </div>
+
+          <div id="geodezija" class="mt-5">
+            <img src="assets/img/services/geodezija.jpg" alt="Geodetski stativ sa opremom fokusira se na gradilište, sa žutim buldožerom u pozadini." class="img-fluid services-img">
+            <h3>Geodezija</h3>
+            <p>
+              Preciznost je temelj svakog uspešnog projekta, a geodezija to osigurava. Pružamo kompletan spektar geodetskih usluga, te kroz detaljna geodetska merenja i izradu elaborata, postavljamo siguran i tačan temelj za vaše projektovanje i izvođenje radova.
+            </p>
+            <p>
+              Geodetske usluge koje pružamo uključuju:
+            </p>
+              <ul>
+                <li><i class="bi bi-check-circle"></i> <span><strong>Geodetsko i kartografsko snimanje lokacije</strong>: Tačno merenje granica zemljišta, nadmorske visine i karakteristika terena radi izrade topografskih karata.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span><strong>Geodetska dokumentacija</strong>: Priprema pravne i tehničke dokumentacije za dozvole i odobrenja, katastarska snimanja za registraciju imovine i potvrdu vlasništva.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span><strong>Snimanje izgrađenog stanja</strong>: Merenja nakon izgradnje radi provere da li projekat odgovara specifikacijama projekta.</span></li>
+                <li><i class="bi bi-check-circle"></i> <span><strong>Integracija sa BIM-om i 3D vizuelizacijom</strong> Podaci se unose u BIM sisteme za modelovanje informacija o objektu.</span></li>
+              </ul>
           </div>
 
           <div id="vizuelizacija" class="mt-5">
@@ -314,7 +332,7 @@
           </div><!-- End footer links column-->
 
           <div class="col-lg-2 col-md-4 footer-links">
-            <strong><a href="o-nama.html">O nama</a></strong>
+            <strong><a href="index.html#team">O nama</a></strong>
           </div><!-- End footer links column-->
 
           <div class="col-lg-1 col-md-4 footer-links">
