--- a/3D-konstrukcija-hale.html
+++ b/3D-konstrukcija-hale.html
@@ -68,8 +68,8 @@
                             </ul>
                         </li>                    </ul>
                 </li>
-                <li><a href="o-nama.html">O nama</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
+                <li><a href="index.html#team">O nama</a></li>
             </ul>
         </nav><!-- .navbar -->
 
@@ -197,7 +197,7 @@
                 </div><!-- End footer links column-->
 
                 <div class="col-lg-2 col-md-4 footer-links">
-                    <strong><a href="o-nama.html">O nama</a></strong>
+                    <strong><a href="index.html#team">O nama</a></strong>
                 </div><!-- End footer links column-->
 
                 <div class="col-lg-1 col-md-4 footer-links">
