--- a/projekat-u-toku.html
+++ b/projekat-u-toku.html
@@ -69,8 +69,8 @@
                         </li>
                     </ul>
                 </li>
-                <li><a href="o-nama.html">O nama</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
+                <li><a href="index.html#team">O nama</a></li>
             </ul>
         </nav><!-- .navbar -->
 
@@ -142,7 +142,7 @@
                 </div><!-- End footer links column-->
 
                 <div class="col-lg-2 col-md-4 footer-links">
-                    <strong><a href="o-nama.html">O nama</a></strong>
+                    <strong><a href="index.html#team">O nama</a></strong>
                 </div><!-- End footer links column-->
 
                 <div class="col-lg-1 col-md-4 footer-links">
